# VideoForge

./: .env.example  .env.production  .gitignore  README.md  metadata.json  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
deploy/: README.md  deploy.sh  nginx.conf  setup.sh  supervisor.conf
frontend/: package.json
server/: app.py
server/agents/: character_agent.py  main_agent.py  script_agent.py
server/backends/: image_backend.py  video_backend.py
server/core/: auth.py  ffmpeg.py  queue.py
server/models/: database.py
server/routes/: agent.py  auth.py  generate.py  projects.py
src/: index.css  main.tsx
src/api/: client.ts
src/components/: AssetGallery.tsx  ChatBox.tsx  Navbar.tsx  ProgressBar.tsx  VideoPlayer.tsx
src/pages/: Home.tsx  Preview.tsx  Project.tsx  Settings.tsx
src/store/: useStore.ts
